<resources>
    <string name="app_name">prompts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="untitled">Untitled</string>
    <string name="enter_passcode_instructions">Enter Pin</string>
    <string name="passcode_enabled_key">PASSCODE_ENABLED_KEY</string>
    <string name="set_passcode_key">SET_PASSCODE_KEY</string>
    <string name="wrong_passcode">Wrong passcode.</string>
    <string name="settings_security_title">Security</string>
    <string name="invalid_passcode_error">Passcodes must be 4 digits.</string>
    <string name="export_json_key">EXPORT_KEY</string>
    <string name="share">Share</string>
    <string name="cant_export_json_error">"Trouble finding a way to export JSON. "</string>
    <string name="cant_export_json_permissions_error">"Unable to create JSON file due to permissions. "</string>
    <string name="export_text_key">EXPORT_TEXT_KEY</string>
    <string name="edit_prompts_title">Edit Prompts</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit_prompts_key">EDIT_PROMPTS_KEY</string>
    <string name="settings_general_title">General</string>
    <string name="settings_export_title">Export</string>
    <string name="add_new_prompt">Add New Prompt</string>
    <string name="edit_prompt_title">Edit Prompt Title</string>
    <string name="edit_prompts_instructions">Check the Prompts you want to display.\nClick on the title to edit the prompt.</string>
    <string name="set_theme_key">SET_THEME_KEY</string>
    <string name="set_theme_color_title">Set Theme Color</string>
    <string name="set_theme_color_message">Customize the color of the Prompt screen.</string>
    <string name="settings">Settings</string>
    <string name="last_pause_key">LAST_PAUSE_KEY</string>

    <array name="initial_prompts">
        <item>What did you dream about today?</item>
        <item>What three things will you focus on today?</item>
        <item>What are you looking forward to most today?</item>
        <item>How are you feeling today?</item>
        <item>What did you do today?</item>
        <item>Did anything special happen today?</item>
        <item>What is something you learned today?</item>
        <item>What made you laugh today?</item>
        <item>What three things are you grateful for today?</item>
    </array>
</resources>
