<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_general_title">

        <Preference
            android:key="@string/edit_prompts_key"
            android:title="@string/edit_prompts_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_security_title">

        <CheckBoxPreference
            android:key="@string/passcode_enabled_key"
            android:title="Enable Passcode"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="@string/set_passcode_key"
            android:title="Set Passcode"
            android:dialogMessage="Please input a 4 digit passcode."
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_export_title">
        <Preference
            android:key="@string/export_json_key"
            android:title="Export as JSON"/>

        <Preference
            android:key="@string/export_text_key"
            android:title="Export as Text"/>
    </PreferenceCategory>

</PreferenceScreen>
